--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -341,11 +341,12 @@ invert-color-include = [
   "class_g=\"com-baselet-standalone-MainStandalone\"",
   "class_g=\"robotc.exe\"",
   "class_g=\"com-cburch-logisim-Main\"",
-  "class_i=\"winword.exe\"",
-  "class_i=\"powerpnt.exe\"",
-  "class_i=\"excel.exe\"",
+#  "class_i=\"winword.exe\"",
+#  "class_i=\"powerpnt.exe\"",
+#  "class_i=\"excel.exe\"",
   "class_g=\"Flashtool\"",
-  "class_g=\"Octave\" && name*=\"Figure\""
+  "class_g=\"Octave\" && name*=\"Figure\"",
+  "class_g=\"GNU Octave\" && name*=\"Figure\""
 ];
 
 # GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer. 
