--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -114,7 +114,7 @@ fade-delta = 3
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1;
-inactive-opacity = 0.8;
+inactive-opacity = 0.9;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0;
@@ -148,12 +148,12 @@ active-opacity = 1.0;
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
-opacity-rule = ["70:name = 'i3lock'",
+opacity-rule = ["50:name = 'i3lock'",
                 "70:class_g = 'dmenu'",
                 "70:class_g = 'Dunst'",
                 "80:class_g = 'Gsimplecal'",
                 "90:class_g = 'Emacs' && focused",
-                "90:class_g = 'st-256color' && focused",
+                "100:class_g = 'st-256color' && focused",
                 "70:class_g *= '__blurme__'"]
 
 
@@ -164,7 +164,7 @@ opacity-rule = ["70:name = 'i3lock'",
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 10;
+corner-radius = 0; # TODO: enable back once picom fixes corner blur
 round-borders = 2;
 
 # Exclude conditions for rounded corners.
@@ -279,7 +279,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 0
+# refresh-rate = 0
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
