--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -338,6 +338,7 @@ detect-client-leader = true
 #
 invert-color-include = [
   "class_g=\"Ghidra\"",
+  "class_g=\"ghidra-Ghidra\"",
   "class_g=\"com-baselet-standalone-MainStandalone\"",
   "class_g=\"robotc.exe\"",
   "class_g=\"com-cburch-logisim-Main\"",
