--- a/configs/mednafen.cfg
+++ b/configs/mednafen.cfg
@@ -5703,10 +5703,10 @@ player.yscalefs 1.000000
 psx.bios_eu scph5502.bin
 
 ;Path to the Japan SCPH-5500/v3.0J ROM BIOS
-psx.bios_jp /mnt/hdd1/Public/Games/psx/mednafen-images/scph5500.bin
+psx.bios_jp ../../.data/Public/Games/psx/mednafen-images/scph5500.bin
 
 ;Path to the North America SCPH-5501/v3.0A ROM BIOS
-psx.bios_na /mnt/hdd1/Public/Games/psx/mednafen-images/scph5501.bin
+psx.bios_na ../../.data/Public/Games/psx/mednafen-images/scph5501.bin
 
 ;Enable BIOS ROM image sanity checks.
 psx.bios_sanity 1
