--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -154,6 +154,7 @@ opacity-rule = ["50:name = 'i3lock'",
                 "80:class_g = 'Gsimplecal'",
                 "90:class_g = 'Emacs' && focused",
                 "100:class_g = 'st-256color' && focused",
+                "100:class_g = 'Gtrm' && focused",
                 "70:class_g *= '__blurme__'"]
 
 
