--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -165,7 +165,7 @@ opacity-rule = ["50:name = 'i3lock'",
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 0; # TODO: enable back once picom fixes corner blur
+corner-radius = 10;
 round-borders = 2;
 
 # Exclude conditions for rounded corners.
@@ -174,7 +174,7 @@ round-borders = 2;
 #   "window_type = 'desktop'"
 # ];
 
-rounded-corners-exclude = "!(class_g='Dunst' || class_g='trayer' || class_g='Gsimplecal' || class_g='dmenu' || class_g='Dragon' || class_g*='__floatme__' || class_i*='__floatme__')"
+rounded-corners-exclude = "!(class_g='Dunst' || class_g='trayer' || class_g='Gsimplecal' || class_g='dmenu' || class_g='Gmenu' || class_g='Dragon' || class_g*='__floatme__' || class_i*='__floatme__')"
 
 # rounded-corners-exclude = [
 #   "focused",
