--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -347,8 +347,8 @@ invert-color-include = [
 #  "class_i=\"powerpnt.exe\"",
 #  "class_i=\"excel.exe\"",
   "class_g=\"Flashtool\"",
-  "class_g=\"Octave\" && name*=\"Figure\"",
-  "class_g=\"GNU Octave\" && name*=\"Figure\""
+#  "class_g=\"Octave\" && name*=\"Figure\"",
+#  "class_g=\"GNU Octave\" && name*=\"Figure\""
 ];
 
 # GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer. 
