--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -226,6 +226,9 @@ blur-background-exclude = [
 #    "window_type = 'dock'",
     "window_type = 'desktop'",
     "_GTK_FRAME_EXTENTS@:c",
+    "class_g ~= 'xdg-desktop-portal' && _NET_FRAME_EXTENTS@:c && window_type = 'dialog'",
+    "class_g ~= 'xdg-desktop-portal' && window_type = 'menu'",
+    "_NET_FRAME_EXTENTS@:c && WM_WINDOW_ROLE@:s = 'Popup'",
 #    "class_i=\"winword.exe\"",
 #    "class_i=\"powerpnt.exe\"",
 #    "class_i=\"excel.exe\"",
