--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -2,6 +2,35 @@
 # picom-jonaburg-git: windows animations, dual_kawase blur, rounded corners from ibhagwan, fade is (sometimes?) broken, buggy
 # picom-ibhagwan-git: dual_kawase blur, rounded corners
 
+#################################
+#          Animations           #
+#################################
+
+
+# fly-in: Windows fly in from random directions to the screen
+# maximize: Windows pop from center of the screen to their respective positions
+# minimize: Windows minimize from their position to the center of the screen
+# slide-in-center: Windows move from upper-center of the screen to their respective positions
+# slide-out-center: Windows move to the upper-center of the screen
+# slide-left: Windows are created from the right-most window position and slide leftwards
+# slide right: Windows are created from the left-most window position and slide rightwards
+# slide-down: Windows are moved from the top of the screen and slide downward
+# slide-up: Windows are moved from their position to top of the screen
+# squeeze: Windows are either closed or created to/from their center y-position (the animation is similar to a blinking eye)
+# squeeze-bottom: Similar to squeeze, but the animation starts from bottom-most y-position
+# zoom: Windows are either created or destroyed from/to their center (not the screen center)
+
+# animations = true;
+# animation-stiffness = 200;
+# animation-window-mass = 0.7;
+# animation-dampening = 20;
+# animation-for-transient-window = "slide-up";
+# animation-for-unmap-window = "minimize";
+# animation-for-open-window = "maximize";
+
+# animating-rule-open = ["zoom:class_g = 'code'"];
+# animating-rule-unmap = ["zoom:class_g = 'code'"];
+
 
 #################################
 #             Shadows           #
@@ -303,7 +332,7 @@ detect-client-opacity = true;
 # to maximize performance for full-screen windows. Known to cause flickering 
 # when redirecting/unredirecting windows.
 #
-# unredir-if-possible = false
+unredir-if-possible = false
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
