--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -90,7 +90,10 @@ shadow-exclude = [
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "class_g = 'lemonbar'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "_GTK_FRAME_EXTENTS@:c",
+  "window_type = 'menu'",
+  "window_type = 'dropdown_menu'",
+  "window_type = 'tooltip'",
 ];
 
 # Specify a X geometry that describes the region in which shadow should not
@@ -258,7 +261,10 @@ blur-background-exclude = [
 #    "class_i=\"powerpnt.exe\"",
 #    "class_i=\"excel.exe\"",
     "class_g = 'maim'",
-    "class_g = 'Empty'"
+    "class_g = 'Empty'",
+    "window_type = 'menu'",
+    "window_type = 'dropdown_menu'",
+    "window_type = 'tooltip'",
 ];
 # blur-background-exclude = "!(name='i3lock' || class_g='dmenu' || class_g*='__blurme__')";
 
