--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -183,6 +183,7 @@ active-opacity = 1.0;
 opacity-rule = ["50:name = 'i3lock'",
                 "70:class_g = 'dmenu'",
                 "70:class_g = 'Dunst'",
+                "100:class_g = 'mpv'",
                 "70:class_g *= '__blurme__'"]
 
 
@@ -260,7 +261,7 @@ blur-background-exclude = [
 #    "class_i=\"winword.exe\"",
 #    "class_i=\"powerpnt.exe\"",
 #    "class_i=\"excel.exe\"",
-    "class_g = 'maim'",
+    "class_g = 'slop'",
     "class_g = 'Empty'",
     "window_type = 'menu'",
     "window_type = 'dropdown_menu'",
