--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -12,7 +12,8 @@ bind T set -g status
 if-shell -b '[ "$SSH_CONNECTION" ]' 'set -g status on'
 
 # Shell
-set-option -g default-command 'exec fish'
+set-option -g default-command 'exec zsh'
+#set-option -g default-command 'exec fish'
 #set-option -g default-command 'exec bash'
 
 # Enable locking
