--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -264,7 +264,7 @@ blur-background-exclude = [
     "class_g = 'slop'",
     "class_g = 'Empty'",
     "window_type = 'menu'",
-    "window_type = 'dropdown_menu'",
+#    "window_type = 'dropdown_menu'",
     "window_type = 'tooltip'",
 ];
 # blur-background-exclude = "!(name='i3lock' || class_g='dmenu' || class_g*='__blurme__')";
