--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -37,6 +37,9 @@ set-option -g set-titles-string "#W - tmux #S:#{pane_pid}"
 bind-key -T copy-mode C-f command-prompt -i -I "#{pane_search_string}" -p "(search down)" "send -X search-forward-incremental \"%%%\""
 bind-key -T copy-mode C-c send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
 
+# Enable sixel
+set -as terminal-features 'contour:sixel'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
