--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -35,7 +35,7 @@ set-option -g set-titles-string "#W - tmux #S:#{pane_pid}"
 
 # CUAish bindings
 bind-key -T copy-mode C-f command-prompt -i -I "#{pane_search_string}" -p "(search down)" "send -X search-forward-incremental \"%%%\""
-bind-key -T copy-mode C-c send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
+bind-key -T copy-mode C-c send-keys -X copy-pipe "xsel -i --clipboard"
 
 # Enable sixel
 set -as terminal-features 'contour:sixel'
