--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -7,6 +7,7 @@
 animations = ({
     triggers = ["close", "hide"];
     opacity = {
+        duration = 0.1;
         timing = "0.1s linear";
         start = "window-raw-opacity-before";
         end = "window-raw-opacity";
@@ -16,6 +17,7 @@ animations = ({
     offset-x = "(1 - scale-x) / 2 * window-width";
     offset-y = "(1 - scale-y) / 2 * window-height";
     scale-x = {
+        duration = 0.1;
         timing = "0.1s cubic-bezier(0.21, 0.02, 0.76, 0.36)";
         start = 1;
         end = 1.04;
@@ -29,11 +31,13 @@ animations = ({
 {
     triggers = ["open", "show"];
     opacity = {
+        duration = 0.1;
         timing = "0.1s linear";
         start = "window-raw-opacity-before";
         end = "window-raw-opacity";
     };
     blur-opacity = {
+        duration = 0.1;
         timing = "0.05s linear 0.1s";
         start = "window-raw-opacity-before";
         end = "window-raw-opacity";
@@ -42,6 +46,7 @@ animations = ({
     offset-x = "(1 - scale-x) / 2 * window-width";
     offset-y = "(1 - scale-y) / 2 * window-height";
     scale-x = {
+        duration = 0.1;
         timing = "0.1s cubic-bezier(0.24, 0.64, 0.79, 0.98)";
         start = 1.04;
         end = 1;
@@ -56,12 +61,14 @@ animations = ({
 {
     triggers = ["workspace-out"];
     offset-x = {
+        duration = 0.1;
         timing = "0.2s cubic-bezier(0.21, 0.02, 0.76, 0.36)";
         start = "0";
         end = "- window-width / 2";
     };
     shadow-offset-x = "offset-x";
     opacity = {
+        duration = 0.1;
         timing = "0.2s linear";
         start = "window-raw-opacity-before";
         end = "window-raw-opacity";
@@ -72,12 +79,14 @@ animations = ({
 {
     triggers = ["workspace-out-inverse"];
     offset-x = {
+        duration = 0.1;
         timing = "0.2s cubic-bezier(0.21, 0.02, 0.76, 0.36)";
         start = "0";
         end = "window-width / 2";
     };
     shadow-offset-x = "offset-x";
     opacity = {
+        duration = 0.1;
         timing = "0.2s linear";
         start = "window-raw-opacity-before";
         end = "window-raw-opacity";
@@ -88,17 +97,20 @@ animations = ({
 {
     triggers = ["workspace-in"];
     offset-x = {
+        duration = 0.1;
         timing = "0.2s cubic-bezier(0.24, 0.64, 0.79, 0.98)";
         start = "window-width / 2";
         end = "0";
     };
     shadow-offset-x = "offset-x";
     opacity = {
+        duration = 0.1;
         timing = "0.2s linear";
         start = "0";
         end = "window-raw-opacity";
     };
     blur-opacity = {
+        duration = 0.1;
         timing = "0.1s linear 0.2s";
         start = "0";
         end = "window-raw-opacity";
@@ -108,17 +120,20 @@ animations = ({
 {
     triggers = ["workspace-in-inverse"];
     offset-x = {
+        duration = 0.1;
         timing = "0.2s cubic-bezier(0.24, 0.64, 0.79, 0.98)";
         start = "- window-width / 2";
         end = "0";
     };
     shadow-offset-x = "offset-x";
     opacity = {
+        duration = 0.1;
         timing = "0.2s linear";
         start = "0";
         end = "window-raw-opacity";
     };
     blur-opacity = {
+        duration = 0.1;
         timing = "0.1s linear 0.2s";
         start = "0";
         end = "window-raw-opacity";
