--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -480,6 +480,9 @@ detect-client-leader = true
 # Resource-hogging, and is not well tested.
 #
 invert-color-include = [
+  "class_i=\"sun-awt-X11-XFramePeer\"",
+  "class_i=\"MATLABWindow\"",
+  "class_i=\"Matlab-GLEE\"",
   "class_g=\"Ghidra\"",
   "class_g=\"ghidra-Ghidra\"",
   "class_g=\"com-baselet-standalone-MainStandalone\"",
