--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -483,6 +483,7 @@ invert-color-include = [
   "class_i=\"sun-awt-X11-XFramePeer\"",
   "class_i=\"MATLABWindow\"",
   "class_i=\"Matlab-GLEE\"",
+  "class_g*=\"MATLAB R20\"",
   "class_g=\"Ghidra\"",
   "class_g=\"ghidra-Ghidra\"",
   "class_g=\"com-baselet-standalone-MainStandalone\"",
