--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -139,9 +139,22 @@ animations = ({
         end = "window-raw-opacity";
     };
     shadow-opacity = "opacity";
+},
+
+{
+    triggers = [ "geometry" ];
+    preset = "geometry-change";
+    duration = 0.1
 }
 
 )
+
+# rules = (
+#   {
+#     match = "MANUAL@ != 1";
+#     animations = ({triggers = [ "geometry" ]; preset = "geometry-change"; });
+#   },
+# )
 
 #################################
 #             Shadows           #
