--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -508,6 +508,7 @@ invert-color-include = [
   "class_g=\"Flashtool\"",
 #  "class_g=\"Octave\" && name*=\"Figure\"",
 #  "class_g=\"GNU Octave\" && name*=\"Figure\""
+  "class_g=\"Qucs\"",
 ];
 
 # GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer.
