--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -307,6 +307,7 @@ opacity-rule = ["50:name = 'i3lock'",
                 "70:class_g = 'dmenu'",
                 "70:class_g = 'Dunst'",
                 "100:class_g = 'mpv'",
+                "100:class_i = \"zoom\"",
                 "70:class_g *= '__blurme__'"]
 
 
@@ -381,6 +382,7 @@ blur-background-exclude = [
 #    "class_i=\"winword.exe\"",
 #    "class_i=\"powerpnt.exe\"",
 #    "class_i=\"excel.exe\"",
+    "class_i=\"zoom\"",
     "class_g = 'slop'",
     "class_g = 'Empty'",
     "window_type = 'menu'",
