--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -496,9 +496,9 @@ detect-client-leader = true
 #
 invert-color-include = [
   "class_i=\"sun-awt-X11-XFramePeer\"",
-  "class_i=\"MATLABWindow\"",
-  "class_i=\"Matlab-GLEE\"",
-  "class_g*=\"MATLAB R20\"",
+  # "class_i=\"MATLABWindow\"",
+  # "class_i=\"Matlab-GLEE\"",
+  # "class_g*=\"MATLAB R20\"",
   "class_g=\"Ghidra\"",
   "class_g=\"ghidra-Ghidra\"",
   "class_g=\"com-baselet-standalone-MainStandalone\"",
@@ -511,6 +511,7 @@ invert-color-include = [
 #  "class_g=\"Octave\" && name*=\"Figure\"",
 #  "class_g=\"GNU Octave\" && name*=\"Figure\""
   "class_g=\"Qucs\"",
+  "class_g=\"draw.io\"",
 ];
 
 # GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer.
