--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -388,6 +388,7 @@ blur-background-exclude = [
     "window_type = 'menu'",
 #    "window_type = 'dropdown_menu'",
     "window_type = 'tooltip'",
+    "role = 'xborder'",
 ];
 # blur-background-exclude = "!(name='i3lock' || class_g='dmenu' || class_g*='__blurme__')";
 
