--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -513,6 +513,7 @@ invert-color-include = [
 #  "class_g=\"GNU Octave\" && name*=\"Figure\""
   "class_g=\"Qucs\"",
   "class_g=\"draw.io\"",
+  "class_g=\"fontforge\"",
 ];
 
 # GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer.
