--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -213,7 +213,7 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
-  "class_g = 'lemonbar'",
+  "class_i = 'lemonbar'",
   "window_type = 'menu'",
   "window_type = 'dropdown_menu'",
   "window_type = 'tooltip'",
@@ -389,6 +389,7 @@ blur-background-exclude = [
 #    "window_type = 'dropdown_menu'",
     "window_type = 'tooltip'",
     "role = 'xborder'",
+    "class_i = 'lemonbar'",
 ];
 # blur-background-exclude = "!(name='i3lock' || class_g='dmenu' || class_g*='__blurme__')";
 
