--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -308,6 +308,7 @@ opacity-rule = ["50:name = 'i3lock'",
                 "70:class_g = 'Dunst'",
                 "100:class_g = 'mpv'",
                 "100:class_i = \"zoom\"",
+                "100:window_type = 'popup_menu'",
                 "70:class_g *= '__blurme__'"]
 
 
@@ -386,7 +387,8 @@ blur-background-exclude = [
     "class_g = 'slop'",
     "class_g = 'Empty'",
     "window_type = 'menu'",
-#    "window_type = 'dropdown_menu'",
+    "window_type = 'dropdown_menu'",
+    "window_type = 'popup_menu'",
     "window_type = 'tooltip'",
     "role = 'xborder'",
     "class_i = 'lemonbar'",
@@ -513,8 +515,9 @@ invert-color-include = [
 #  "class_g=\"Octave\" && name*=\"Figure\"",
 #  "class_g=\"GNU Octave\" && name*=\"Figure\""
   "class_g=\"Qucs\"",
-  "class_g=\"draw.io\"",
+#  "class_g=\"draw.io\"",
   "class_g=\"fontforge\"",
+#  "class_g=\"com-eteks-sweethome3d-SweetHome3D\"",
 ];
 
 # GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer.
